--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -56,6 +56,7 @@
   year={2006},
   publisher={Springer}
 }
+
 @article{Sklar1959,
 	author = "Sklar, A.",
 	journal = "Publ. Inst. Statist. Univ. Paris",
@@ -296,4 +297,48 @@
   url={http://books.google.com.br/books?id=C4pRAAAAMAAJ},
   year={1969},
   publisher={Pergamon Press}
+}
+
+@book{Cover2006,
+  title={Elements of Information Theory},
+  author={Cover, T.M. and Thomas, J.A.},
+  isbn={9780471748816},
+  url={http://books.google.com.br/books?id=EuhBluW31hsC},
+  year={2006},
+  publisher={Wiley}
+}
+
+@book{Amari2000,
+  title={J{\=o}h{\=o} Kika No H{\=o}h{\=o} (Methods of Information Geometry)},
+  author={Amari, S. and Nagaoka, H. and Harada, D.},
+  isbn={9780821843024},
+  lccn={00059362},
+  series={Translations of mathematical monographs v. 191},
+  url={http://books.google.com.br/books?id=vc2FWSo7wLUC},
+  year={2000},
+  publisher={Amer Mathematical Society}
+}
+
+@book{Landau1980,
+  title={Statistical Physics Pt. 1},
+  volume={6},
+  author={Landau, L.D. and Lifshitz, E.M. and Pitaevskii, L.P.},
+  isbn={9780750626361},
+  series={Course of Theoretical Physics},
+  url={http://books.google.com.br/books?id=NaB7oAkon9MC},
+  year={1980},
+  publisher={Elsevier Science \& Technology Books}
+}
+
+@article{NCaticha2011,
+author = {Caticha, Nestor and Vicente, Renato},
+title = {Agent-based social psychology: from neurocognitive processes to social data},
+journal = {Advances in Complex Systems},
+volume = {14},
+number = {05},
+pages = {711-731},
+year = {2011},
+doi = {10.1142/S0219525911003190},
+URL = {http://www.worldscientific.com/doi/abs/10.1142/S0219525911003190},
+eprint = {arXiv:1005.5718 [physics.soc-ph]}
 }
