--- a/confs/commands.tex
+++ b/confs/commands.tex
@@ -19,6 +19,7 @@
 
 \newtheorem{Teorema}{Teorema}
 \newtheorem{Proposicao}{Proposição}
+\newtheorem*{Principio}{Princípio da Máxima Entropia}
 \newtheorem{Fancy}{}
 
 
