changed toc depth

--- a/confs/tweaks.tex
+++ b/confs/tweaks.tex
@@ -19,6 +19,8 @@
 
 %Show number in chapters, sections and subsections
 \setcounter{secnumdepth}{2}
+%Show sections on TOC
+\setcounter{tocdepth}{1}
 
 % Adjust number position in chapters and a a \rceil symbol to separate the number from the title
 \titleformat{\chapter}%
